# triumphal-os-installer-config

./: README.md  config.yaml  meson.build
archinstall-scripts/: guided.py
scripts/: prepare.sh
